--- a/core/Gemfile
+++ b/core/Gemfile
@@ -5,4 +5,4 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 # Specify your gem's dependencies in core.gemspec
 gemspec
 
-gem 'quasi', path: '../quasi'
+gem 'quanta', path: '../quanta'
