using the new gems

--- a/catalyst/Gemfile
+++ b/catalyst/Gemfile
@@ -9,8 +9,8 @@ gem 'bootstrap', '~> 4.2.1'
 gem 'jquery-rails'
 gem 'rb-readline'
 
-gem 'quasi', path: '../quasi'
-gem 'quore', path: '../quore'
+gem 'quanta', path: '../quanta'
+gem 'core', path: '../core'
 
 
 # Use Puma as the app server
