--- a/web/Gemfile
+++ b/web/Gemfile
@@ -7,6 +7,7 @@ ruby '2.5.1'
 gem 'rails', '~> 5.2.2', '>= 5.2.2.1'
 gem 'bootstrap', '~> 4.2.1'
 gem 'jquery-rails'
+gem 'devise'
 
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
